--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         My first Project
     </title>
     <body>
-        This is my first project
+        This is my first project edited;
     </body>
 </head>
 </html>
