minor changes third time

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         My first Project
     </title>
     <body>
-        This is my first project edited second time;
+        This is my first project edited third time;
     </body>
 </head>
 </html>
